k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
spec:
  selector:
    app: spring
    tier: web
  ports:
   - protocol: TCP
     port: 8081
     targetPort: 8081
  type: NodePort
